--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -1,16 +1,22 @@
-<div *ngIf="isLoading && pokemonList.length === 0" class="loading-indicator">
-  Loading Pokemon details...
-</div>
+@if(isLoading && pokemonList.length === 0){
+    <div class="loading-indicator">
+    Loading Pokemon details...
+    </div>
+}
 
-<div *ngIf="error" class="error-message">
-  {{ error }}
-</div>
+@if(error){
+    <div class="error-message">
+    {{error}}
+    </div>
+}
 
-<div *ngIf="!isLoading && !error && pokemonList.length === 0" class="no-pokemon-found">
-  No Pokemon found.
-</div>
+@if(!isLoading && !error && pokemonList.length === 0){
+    <div class="no-pokemon-found">
+    No Pokemon found.
+    </div>
+}
 
-<div *ngIf="!isLoading && pokemonList.length > 0">
+@if(!isLoading && pokemonList){
   <h2>Pokemon List</h2>
   <ul>
     <li *ngFor="let pokemon of pokemonList">
@@ -23,4 +29,4 @@
       </a>
     </li>
   </ul>
-</div>
+}
